<resources>
    <string name="app_name">Github</string>

    <string name="menu_refresh">Обновить</string>
    <string name="menu_logout">Выйти</string>

    <string name="search_validation_message">Требуется не менее трех букв.</string>
    <string name="search_nothing_found_message">Ничего не найдено.</string>
    <string name="read_data_message">Ошибка</string>

    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>

    <string name="error_field_required">Требуется ввести значение</string>
    <string name="error_action_login">Проверьте правильность заполнения полей и повторите попытку.</string>

    <string name="text_owner">Владелец:</string>
    <string name="text_description">Описание:</string>
    <string name="text_forks">Ветки:</string>
    <string name="text_watchers">Наблюдатели:</string>

    <string name="text_date">Дата:</string>
    <string name="text_author">Автор:</string>
    <string name="text_message">Комментарий:</string>
    <string name="text_hash">Hash:</string>

    <string name="imageview_avatar">Аватар владельца репозитория</string>

</resources>
