<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="5dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/item_vertical_margin"
        android:paddingLeft="@dimen/item_horizontal_margin"
        android:paddingRight="@dimen/item_horizontal_margin"
        android:paddingTop="@dimen/item_vertical_margin"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_date"
                android:textStyle="bold"
                android:paddingRight="@dimen/item_horizontal_margin"
                android:paddingEnd="@dimen/item_horizontal_margin"
                android:paddingLeft="@dimen/item_horizontal_margin"
                android:paddingStart="@dimen/item_horizontal_margin"
                />


            <TextView
                android:id="@+id/textview_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_author"
                android:textStyle="bold"
                android:paddingRight="@dimen/item_horizontal_margin"
                android:paddingEnd="@dimen/item_horizontal_margin"
                android:paddingLeft="@dimen/item_horizontal_margin"
                android:paddingStart="@dimen/item_horizontal_margin"
                />


            <TextView
                android:id="@+id/textview_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_message"
                android:textStyle="bold"
                android:paddingRight="@dimen/item_horizontal_margin"
                android:paddingEnd="@dimen/item_horizontal_margin"
                android:paddingLeft="@dimen/item_horizontal_margin"
                android:paddingStart="@dimen/item_horizontal_margin"
                />


            <TextView
                android:id="@+id/textview_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_hash"
                android:textStyle="bold"
                android:paddingRight="@dimen/item_horizontal_margin"
                android:paddingEnd="@dimen/item_horizontal_margin"
                android:paddingLeft="@dimen/item_horizontal_margin"
                android:paddingStart="@dimen/item_horizontal_margin"
                />


            <TextView
                android:id="@+id/textview_hash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
