<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_root_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="5dp"
        card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/item_vertical_margin"
        android:paddingLeft="@dimen/item_horizontal_margin"
        android:paddingRight="@dimen/item_horizontal_margin"
        android:paddingTop="@dimen/item_vertical_margin"
        >

        <ImageView
            android:id="@+id/imageview_owner_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/item_vertical_margin"
            android:paddingLeft="@dimen/item_horizontal_margin"
            android:paddingRight="@dimen/item_horizontal_margin"
            android:paddingTop="@dimen/item_vertical_margin"
            android:contentDescription="@string/imageview_avatar"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_owner"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/item_horizontal_margin"
                    android:paddingEnd="@dimen/item_horizontal_margin"
                    android:paddingLeft="@dimen/item_horizontal_margin"
                    android:paddingStart="@dimen/item_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/textview_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_description"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/item_horizontal_margin"
                    android:paddingEnd="@dimen/item_horizontal_margin"
                    android:paddingLeft="@dimen/item_horizontal_margin"
                    android:paddingStart="@dimen/item_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/textview_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forks"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/item_horizontal_margin"
                    android:paddingEnd="@dimen/item_horizontal_margin"
                    android:paddingLeft="@dimen/item_horizontal_margin"
                    android:paddingStart="@dimen/item_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/textview_forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_watchers"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/item_horizontal_margin"
                    android:paddingEnd="@dimen/item_horizontal_margin"
                    android:paddingLeft="@dimen/item_horizontal_margin"
                    android:paddingStart="@dimen/item_horizontal_margin"
                    />

                <TextView
                    android:id="@+id/textview_watchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>



</LinearLayout>